# UX25_DE25_Projekt_Group3

./: .gitignore  README.md  eda_Kristian.ipynb  index.html  main.py  pyproject.toml  requirements.txt  script.js  test_pipline.py
ETL_Pipline/: app.py  backup.html  bostader.csv  dash.html  extract.py  googlemaps.html  load.py  load_to_supabase.py  platser.csv  priser.csv  right_home_cleaned.csv  righthome_karta_v2-2.html  righthome_karta_v2-3.html  scripts.js  set_sparad.py  transform.py  visningar.csv
docs/: installationer.md  onboarding_guide.md
notebooks/: eda_Andreas.ipynb  eda_Paulo.ipynb  eda_nasser.ipynb  eda_zineb.ipynb
src/data/: bostader.json  eda_duckdb.py  generate_data.py  generate_osm_data.py  scb_stats.json
src/data/services/: osm_service.py  scb_service.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/assets/style/: app.css
streamlit_app/components/: charts.py  filter_bar.py  karta.py  kpi_cards.py  objekt_lista.py
streamlit_app/pages/: entre.py  karta_vy.py  statistik.py
streamlit_app/utils/: constants.py  helpers.py
streamlit_app/vyer/: home.py  karta_vy.py
